# BOT-TRADING-ARBITRAGE

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STRATEGY_EVOLUTION.md
config/: markets.toml
contracts/: .env.example  .gitignore  foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: PredictionMarket.sol
contracts/test/: PredictionMarket.t.sol
crates/chainlink/: Cargo.toml
crates/chainlink/examples/: probe.rs
crates/chainlink/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/decision/: Cargo.toml
crates/decision/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/examples/: live_smoke.rs
crates/execution/src/: lib.rs
crates/feed/: Cargo.toml
crates/feed/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: binance.rs  bybit.rs  coinalyze.rs  deribit.rs  features.rs  main.rs  polymarket.rs  types.rs  writer.rs
crates/learning/: Cargo.toml
crates/learning/src/: lib.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
dashboard/: index.html
src/: config.rs  main.rs  sim.rs
