[package]
name = "chainlink"
version.workspace = true
edition.workspace = true

[dependencies]
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
hex         = "0.4"
hmac        = "0.12"
sha2        = "0.10"

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "probe"
path = "examples/probe.rs"
